Fixed responsive layout issue with restaurant details page header and footer by commenting out the css styles in styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width:100%;
+    /* width:100%; */
     /* width: calc(50% - 80px); */
 }
 
@@ -201,7 +201,7 @@ nav h1 a {
 } */
 #map-container2 {
   background: blue none repeat scroll 0 0;
-  height: 500px;
+  height: 495px;
   width: 100%;
   order:1;
 } 
@@ -244,7 +244,7 @@ nav h1 a {
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
+  padding: 10px 40px 30px;
   width: 100%;
 }
 #restaurant-container{
@@ -292,13 +292,13 @@ body {
   position:relative;
 
 }
-.inside header {
+/* .inside header {
   position: fixed;
   top: 0; 
   width: 100%;
   z-index: 10000;
 
-}
+} */
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
@@ -306,12 +306,12 @@ body {
   display:flex;
   flex-wrap:wrap;
 }
-.inside #footer {
+/* .inside #footer {
   bottom: 0;
   position: absolute; 
   width: 100%;
 
-}
+} */
 
 
 
@@ -331,7 +331,7 @@ body {
   /* reduce width of map container in order to have it fit in the second column */
   .inside #map-container2{
     width:50%;
-    margin-top:210px;
+    margin-top:85px;
   }
 
 } 
